--- a/htdocs/add_on.css
+++ b/htdocs/add_on.css
@@ -1,52 +1,65 @@
-/* player specific positioning of the displayed 'frequency spectrum', etc */
+/* 
+ player specific positioning of the displayed 'frequency spectrum', etc 
 
-/* fucking shit z-index doesn't work when webkit-transform is involved */
+ NOTE: the reflection and position handling is a fucking nightmare: The Chome idiots
+ like to change their dumbshit implementation with almost every minor release.. each
+ time breaking what had to be used before.. bunch of clueless morons! 
+ (Their latest achievement: reflection suddenly disapears (border and all) AS SOON as 
+ JavaScript draws to the contained canvas. Of course they are also too dumb to use 
+ regular font definitions anymore.)
+*/
 
-/*notes: changing "width" on "logo" affects the "background" and the "reflection" but not the main div;
-        similarily origin for "webkit-transform" rotations is affected unpredicably by top/left and
-		by "translate" so as to render it bloody unusable, layout "logic" used in Chrome seems to be
-        changed/broken regularily with each new Chrome version 		-- fucking idiots */
-.logo {
+#moz-reflect-logo {
   position: relative;
-  top: 140px;
-  left: 560px;
-  z-index:2;
+	padding: 0 10px;
 
    -webkit-box-reflect: below 10px -webkit-linear-gradient(top, transparent 10%, transparent 40%,  rgba(255,255,255,0.9));
 }
-/* unusable Chome shit: webkit-transform changes the visible area of the used context: unbelievable what kind of 
-  clueless idiots must be working on Chrome */
+
 #logo {
-  -webkit-transform: scale(0.7) translateX(-310px) translateY(0px) translateZ(0px) rotateX(-22deg) rotateY(-50deg) rotateZ(-6deg);
-  -moz-transform: translateX(-110px) translateY(-70px) translateZ(-440px) rotateX(-28deg) rotateY(-50deg) rotateZ(-6deg);
+	position: relative;
+	padding: 0 10px;
+
+	top: 40px;
+	left: 400px;
+	z-index:2;
+
+	-webkit-transform: translateX(-220px) translateY(100px) translateZ(300px) rotateX(-28deg) rotateY(-60deg) rotateZ(-6deg);
+	-moz-transform: translateX(-240px) translateY(200px) translateZ(300px) rotateX(-28deg) rotateY(-60deg) rotateZ(-6deg);
 }
 #moz-reflect-logo:after {
     content: "";
     display: none;
 }
 
+/* problem: the gradient used to "fade-out" the reflection uses no transparency - and covers the background */
 #moz-reflect-logo.enableMozReflection:after {
     display: block;
 
-    background: -moz-linear-gradient(top, white, white 30%, rgba(255,255,255,0.6) 65%, rgba(255,255,255,0.3)) -60px,
-	            -moz-element(#moz-reflect-logo)  0px -77px no-repeat;
+	background: -moz-linear-gradient(top, rgba(255,255,255,1.0), rgba(255,255,255,1.0) 30%, rgba(255,255,255,0.6) 65%, rgba(255,255,255,0.3)) -60px,
+				-moz-element(#moz-reflect-logo)  -10px 0px no-repeat;
     position:relative;
     width: auto;
-    height: 200px;
+	height: 100px;
     margin-bottom: 0px;
     -moz-transform: scaleY(-1);
 }
-.spectrum {
-	position: relative;
-	top: -180px;
-	left: 165px;
-	z-index:1;
 
+#moz-reflect-spectrum {
+	position: relative;
+	padding: 0 10px;
 	-webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.4));
 }
 #spectrum {
-  -webkit-transform: rotateX(-40deg)  translateY(150px) rotateY(35deg) rotateZ(0deg) translateZ(-220px);
-  -moz-transform: translateX(-150px) translateY(-250px) translateZ(-440px) rotateX(-40deg) rotateY(45deg);  
+	position: relative;	
+	padding: 0 10px;
+
+	top: 120px;
+	left: 265px;
+	z-index:1;
+
+	-webkit-transform: translateX(-250px) translateY(-250px) translateZ(0px) rotateX(-40deg) rotateY(45deg);
+	-moz-transform: translateX(-250px) translateY(-250px) translateZ(0px) rotateX(-40deg) rotateY(45deg);  
 }
 
 #moz-reflect-spectrum:after {
@@ -57,11 +70,11 @@
 #moz-reflect-spectrum.enableMozReflection:after {
     display: block;
 	background: -moz-linear-gradient(top, white, white 30%, rgba(255,255,255,0.6) 65%, rgba(255,255,255,0.3)) -60px,
-	            -moz-element(#moz-reflect-spectrum)  0px -27px no-repeat;
+				-moz-element(#moz-reflect-spectrum)  -10px 15px no-repeat;
 	position:relative;
 	top: 0px;
     width: auto;
-	height: 155px;
+	height: 100px;
 	margin-bottom: 0px;
 	-moz-transform: scaleY(-1);
 }
@@ -72,6 +85,6 @@
 	height:300px;
 }
 #drop {
-  -webkit-transform: translateX(180px) translateY(-130px) translateZ(0px) rotateX(10deg) rotateY(-5deg) rotateZ(8deg);
-  -moz-transform: translateX(180px) translateY(-400px) translateZ(0px) rotateX(10deg) rotateY(-5deg) rotateZ(8deg);
+	-webkit-transform: translateX(50px) translateY(130px) translateZ(0px) rotateX(10deg) rotateY(-5deg) rotateZ(8deg);
+	-moz-transform: translateX(50px) translateY(0px) translateZ(0px) rotateX(10deg) rotateY(-5deg) rotateZ(8deg);
 }
